--- a/public/css/airtizen.css
+++ b/public/css/airtizen.css
@@ -1,3 +1,6 @@
+html,body {
+	height: 100%;
+}
 .icon {
 	text-align: center;
 	margin: 50px;
@@ -6,4 +9,15 @@
 	cursor: pointer;
 }
 
+#background {
+	width: 100%;
+	height: 100%;
+}
 
+.modal-backdrop {
+	z-index: 3000;
+}
+
+.modal {
+	z-index: 3001;
+}
