--- a/public/css/airtizen.css
+++ b/public/css/airtizen.css
@@ -50,3 +50,75 @@ html,body {
 	border-radius: 3px;
 	border: 1px solid red;
 }
+
+
+.right_arrow_box_container {
+	margin-right: 20px;
+	margin-left: 150px;
+}
+.left_arrow_box_container {
+	margin-right: 150px;
+	margin-left: 20px;
+}
+.arrow_box {
+	padding: 20px;
+	margin-top: 20px;
+	position: relative;
+	background: #88b7d5;
+	border: 3px solid #c2e1f5;
+	border-radius: 5px;
+}
+
+.left_arrow_box:after, .arrow_box:before {
+	right: 100%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	pointer-events: none;
+}
+
+.left_arrow_box:after {
+	border-color: rgba(136, 183, 213, 0);
+	border-right-color: #88b7d5;
+	border-width: 10px;
+	top: 50%;
+	margin-top: -10px;
+}
+.left_arrow_box:before {
+	border-color: rgba(194, 225, 245, 0);
+	border-right-color: #c2e1f5;
+	border-width: 14px;
+	top: 50%;
+	margin-top: -14px;
+}
+
+
+.right_arrow_box:after, .arrow_box:before {
+	left: 100%;
+	border: solid transparent;
+	content: " ";
+	height: 0;
+	width: 0;
+	position: absolute;
+	pointer-events: none;
+}
+
+.right_arrow_box:after {
+	border-color: rgba(136, 183, 213, 0);
+	border-left-color: #88b7d5;
+	border-width: 10px;
+	top: 50%;
+	margin-top: -10px;
+}
+.right_arrow_box:before {
+	border-color: rgba(194, 225, 245, 0);
+	border-left-color: #c2e1f5;
+	border-width: 14px;
+	top: 50%;
+	margin-top: -14px;
+}
+
+
+
