--- a/public/css/airtizen.css
+++ b/public/css/airtizen.css
@@ -51,6 +51,15 @@ html,body {
 	border: 1px solid red;
 }
 
+.contacts {
+	margin-top: 10px;
+}
+
+.contacts h3.selection {
+	border-radius: 3px;
+	border: 1px solid red;
+}
+
 
 .right_arrow_box_container {
 	margin-right: 20px;
